jobhunter/src/main/java/com/example/jobhunter/utils/errors/StorageException.java
package com.example.jobhunter.utils.errors;

public class StorageException extends Exception {
    public StorageException(String message) {
        super(message);
    }
}
